# drf_project2

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
authentication/: serializers.py  urls.py  views.py
drf_project/: settings.py  urls.py
transaction/: models.py  serializers.py  urls.py  views.py
transaction/migrations/: 0001_initial.py  0002_alter_transaction_commission_and_more.py  0003_alter_transaction_commission_and_more.py  0004_alter_transaction_transfer_amount.py
wallet/: models.py  serializers.py  tests.py  urls.py  views.py
wallet/migrations/: 0001_initial.py  0002_alter_wallet_name.py  0002_remove_user_created_on.py  0003_alter_wallet_name.py  0003_transaction.py  0004_alter_wallet_name.py  0005_alter_wallet_user.py  0006_alter_wallet_user.py  0007_alter_wallet_currency_alter_wallet_type.py  0008_alter_wallet_balance.py  0009_alter_wallet_balance.py  0010_alter_wallet_balance.py  0011_alter_wallet_currency.py  0012_alter_wallet_currency.py
